# fastapi_zero_madr_projeto_final

./: .dockerignore  .env.txt  .gitignore  Dockerfile  README.md  compose.yaml  entrypoint.sh  fly.toml  pyproject.toml
.github/workflows/: pipeline.yaml
madr/: app.py  schemas.py  security.py  utils.py
madr/routers/: accounts_router.py  auth_router.py  books_router.py  novelists_router.py
madr/schemas/: book_schema.py  message_schema.py  novelist_schema.py
migrations/: env.py
misc/: secret_key_gen.py
tests/: conftest.py  test_app.py  test_endpoint_accounts.py  test_endpoint_books.py  test_local_db.py  test_security.py
