[tool.poetry]
name = "madr"
version = "0.1.0"
description = "MADR é um projeto final do curso de FastAPI"
authors = ["devfabiopedro <fabio.silvapedro76@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
psycopg = {extras = ["binary"], version = "^3.2.1"}
sqlalchemy = "^2.0.31"
pydantic-settings = "^2.4.0"
alembic = "^1.13.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
ruff = "^0.5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Configurações do RUFF
[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

# Configurações de testes do Pytest
[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

# Configurações do Taskipy
[tool.taskipy.tasks]
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
run = 'fastapi dev madr/app.py'
test = 'pytest -s -x --cov=madr -vv'
post-test = 'coverage html && python misc/coverage-report.py'